--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
       </div>
     </section>
 
-    <script src="./index.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
