--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Softskill Compass</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <h1>¿Como te sientes Hoy?</h1>
@@ -12,26 +12,28 @@
     <section class="emociones">
       <div class="emocion">
         <button id="feliz">Feliz</button>
-        <img src="./img/feliz.jpeg" alt=""/>
+        <img src="./assets/img/feliz.jpeg" alt=""/>
         <p>Le veo el lado positivo a todo</p>
       </div>
       <div class="emocion">
         <button id="molesto">Molesto</button>
-        <img src="./img/molesto.jpeg" alt=""/>
+        <img src="./assets/img/molesto.jpeg" alt=""/>
         <p>Ni me miren que no quiero hablar</p>
       </div>
       <div class="emocion">
         <button id="ansioso">Ansioso</button>
-        <img src="./img/ansioso.jpeg" alt=""/>
+        <img src="./assets/img/ansioso.jpeg" alt=""/>
         <p>No me puedo concentrar en nada en concreto</p>
       </div>
       <div class="emocion">
         <button id="triste">Triste</button>
-        <img src="./img/triste.jpeg" alt=""/>
+        <img src="./assets/img/triste.jpeg" alt=""/>
         <p>Hoy nada tiene sentido para mi</p>
       </div>
     </section>
 
-    <script src="./script.js"></script>
+    <footer>No olvidemos que las pequeñas emociones son los grandes capitanes de nuestras vidas y las obedecemos sin darnos cuenta</footer>
+
+    <script src="./js/script.js"></script>
   </body>
 </html>
