add new funcionality

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
       <section id="contenedor-tarjetas">
 
       </section>
+
+      <section id="recomendacion-musical"></section>
     </main>
 
     <footer id="footer">
