--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
       <section id="recomendacion-musical"></section>
     </main>
 
+    <div id="resultado"></div>
+
     <footer id="footer">
       No olvidemos que las pequeñas emociones son los grandes capitanes de
       nuestras vidas y las obedecemos sin darnos cuenta
     </footer>
 
-    <script src="./js/script.js"></script>
+    <script src="./js/script.js" type="module"></script>
   </body>
 </html>
