fix the structure

--- a/index.html
+++ b/index.html
@@ -19,23 +19,19 @@
       <section class="emociones">
         <article class="emocion">
           <button class="boton-emocion" id="feliz">Feliz</button>
-          <!-- <img src="./assets/img/feliz.jpeg" alt="" /> -->
-          <!-- <p>Le veo el lado positivo a todo</p> -->
+
         </article>
         <article class="emocion">
           <button class="boton-emocion"  id="molesto">Molesto</button>
-          <!-- <img src="./assets/img/molesto.jpeg" alt="" /> -->
-          <!-- <p>Ni me miren que no quiero hablar</p> -->
+  
         </article>
         <article class="emocion">
           <button class="boton-emocion" id="ansioso">Ansioso</button>
-          <!-- <img src="./assets/img/ansioso.jpeg" alt="" /> -->
-          <!-- <p>No me puedo concentrar en nada en concreto</p> -->
+
         </article>
         <article class="emocion">
           <button class="boton-emocion" id="triste">Triste</button>
-          <!-- <img src="./assets/img/triste.jpeg" alt="" /> -->
-          <!-- <p>Hoy nada tiene sentido para mi</p> -->
+
         </article>
       </section>
 
@@ -54,5 +50,6 @@
     </footer>
 
     <script src="./js/script.js" type="module"></script>
+    <!-- <script src="./js/spotify.js"></script> -->
   </body>
 </html>
