add new function mostrarHistorial and guardarHistorial

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       <section id="recomendacion-musical"></section>
       <div id="resultado"></div>
     </div>
+    <div id="resultado"></div>
+    <div id="historial" class="historial-box"></div>
     </main>
 
 
